fixed cabinet image size on mobile

--- a/src/Components/Styles/Hero.scss
+++ b/src/Components/Styles/Hero.scss
@@ -28,7 +28,6 @@ main {
     );
     z-index: 100;
     padding: 1rem;
-    height: 100vh;
     height: fit-content;
     border-radius: 5px;
 
