--- a/src/Components/Styles/footer.scss
+++ b/src/Components/Styles/footer.scss
@@ -16,10 +16,10 @@ footer {
   .logo {
     margin: 0 auto;
     width: fit-content;
-    height: 60px;
+    height: 80px;
     img {
-      width: 100%;
-      height: 100%;
+      width: 70%;
+      height: 70%;
       object-fit: contain;
     }
   }
@@ -53,6 +53,12 @@ footer {
 
 @media (hover: hover) {
   footer {
+    .logo {
+      img {
+        width: 90%;
+        height: 90%;
+      }
+    }
     .link--wrapper {
       li {
         a {
